<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_05"
    android:padding="15dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_weight="50"
        app:srcCompat="@drawable/login" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textEmailAddress"

        android:hint="@string/email"

        android:layout_weight="9"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"

        android:drawableLeft="@drawable/email1"
        android:drawablePadding="10dp"

        android:background="@drawable/edt_style" />

    <EditText
        android:id="@+id/txtEditUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"

        android:hint="@string/user"

        android:layout_weight="9"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"

        android:drawableLeft="@drawable/usuario_5"
        android:drawablePadding="10dp"

        android:background="@drawable/edt_style" />

    <EditText
        android:id="@+id/txtPassword2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPassword"

        android:layout_weight="9"
        android:hint="@string/password"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"

        android:drawableLeft="@drawable/bloquear"
        android:drawablePadding="10dp"

        android:background="@drawable/edt_style" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPassword"

        android:layout_weight="9"
        android:hint="@string/confirmPassword"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"

        android:drawableLeft="@drawable/confirmar1"
        android:drawablePadding="10dp"

        android:background="@drawable/edt_style" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="125dp"

        android:layout_marginBottom="5dp"
        android:layout_weight="10"
        android:background="@drawable/btn_style"

        android:onClick="signUp"

        android:text="@string/registrarse"
        android:textColor="@color/blanco"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="15"
        android:gravity="center|top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewBackToMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableBottom="@drawable/volver1"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:onClick="toMainActivity"
            android:text="@string/volver"
            android:textStyle="bold|italic" />


    </LinearLayout>

</LinearLayout>