<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_05"
    android:padding="15dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="6dp"
        android:layout_marginTop="38dp"
        android:layout_weight="30"
        android:orientation="horizontal"
        android:textAlignment="textEnd">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="334dp"
            android:layout_height="214dp"
            android:layout_weight="50"
            app:srcCompat="@drawable/login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="50"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:id="@+id/txtViewAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Acerca de"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewInfo1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="3"
                android:text="@string/creditos"
                android:textAlignment="center"
                android:textColor="#0B0A0A"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
            <TextView
                android:id="@+id/txtViewInfo2"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:text="@string/lenguaje"
                android:textAlignment="center"
                android:textColor="#0B0A0A"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtViewInfo3"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:text="@string/version"
                android:textAlignment="center"
                android:textColor="#0B0A0A"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:layout_weight="8"
                app:srcCompat="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/txtViewBackToHome3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableBottom="@drawable/volver1"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:onClick="toHomeActivity3"
                android:text="@string/volver"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>